[gd_scene load_steps=4 format=3 uid="uid://b7vbmbqnxea6y"]

[ext_resource type="Script" path="res://Scripts/InventoryScreen.gd" id="1_3xdl5"]
[ext_resource type="Theme" uid="uid://boae5h5x4m1gb" path="res://Themes/buttons.tres" id="2_kj1ej"]
[ext_resource type="Theme" uid="uid://qsc4i4scr2gk" path="res://Themes/item.tres" id="3_rc4hx"]

[node name="InventoryScreen" type="CanvasLayer"]
script = ExtResource("1_3xdl5")

[node name="BackI" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 210.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kj1ej")
text = "Back"

[node name="Use" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kj1ej")
text = "Use"

[node name="ScrollC" type="ScrollContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 480.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridC" type="GridContainer" parent="ScrollC"]
layout_mode = 2
columns = 2

[node name="Healing" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_rc4hx")
text = "Healing: "

[node name="Mana" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_rc4hx")
text = "Mana: "

[node name="Cleansing" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_rc4hx")
text = "Cleansing:"

[node name="Description" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -240.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Description"
horizontal_alignment = 1

[connection signal="pressed" from="BackI" to="." method="_on_back_i_pressed"]
[connection signal="pressed" from="Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Healing" to="." method="_on_healing_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Mana" to="." method="_on_mana_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Cleansing" to="." method="_on_cleansing_pressed"]
